<?xml version="1.0"?>
<package format="3">
  <name>ftf_control</name>
  <version>0.0.0</version>
  <description>FTF control nodes for Beckhoff TwinCAT 2 SPS</description>
  <maintainer email="ftf@todo.todo">ftf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
