<?xml version="1.0"?>
<package format="3">
  <name>ftf_description</name>
  <version>0.0.1</version>
  <description>Robot description for FTF</description>

  <maintainer email="ftf@todo.todo">ftf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
