<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ftf_nav2</name>
  <version>0.1.0</version>
  <description>FTF full navigation system (Nav2, EKF, SLAM, RViz)</description>

  <maintainer email="mustafa@example.com">Mustafa Ibrahim</maintainer>
  <license>Apache-2.0</license>

  <!-- Build -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ========== RUNTIME DEPENDENCIES ========== -->
  <!-- Nav2 -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <!-- Localization / EKF -->
  <exec_depend>robot_localization</exec_depend>

  <!-- SLAM -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- TF -->
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- Messages -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- RViz -->
  <exec_depend>rviz2</exec_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python -->
  <exec_depend>python3</exec_depend>

  <!-- Tests (optional) -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
